add logic to connect multiple silos in cluster

--- a/OrleansDemo/OrleansDemo.Client/OrleansDemo.Client.csproj
+++ b/OrleansDemo/OrleansDemo.Client/OrleansDemo.Client.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.Orleans.Client" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\OrleansDemo.Grains\OrleansDemo.Grains.csproj" />
+    </ItemGroup>
+
 </Project>
