--- a/OrleansDemo/OrleansDemo.Server/OrleansDemo.Server.csproj
+++ b/OrleansDemo/OrleansDemo.Server/OrleansDemo.Server.csproj
@@ -8,6 +8,11 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Orleans.Server" Version="8.0.0" />
+      <PackageReference Include="OrleansDashboard" Version="7.2.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\OrleansDemo.Grains\OrleansDemo.Grains.csproj" />
     </ItemGroup>
 
 </Project>
